added a sunrise and sunset component. Working on building out a chart using D3 with some dummy data. I messaged the RescueTime support to see if they will allow cross origin requests as that is the issue I am having while using localhost

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -22,3 +22,16 @@ img{
     border-width: 4px;
     border-color: black;
 }
+.sunData{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.sunriseData{
+    display: flex;
+    flex-direction: column;
+}
+.sunsetData{
+    display: flex;
+    flex-direction: column;
+}
